--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 *
 {
     margin: 0;
@@ -13,14 +12,9 @@ html
 body
 {
     min-height: 100vh;
+    background-image: url('./images/FatChoy_hbg.png');
     display: flex;
     flex-direction: column;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-header,footer
-{
-    background-color: #f8f7ee;
 }
 
 header
@@ -34,14 +28,14 @@ header
 
 .links-div
 {
-    width: 70%;
-
+    /* border: 1px solid red; */
+    max-width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
-
 
 /* Style tab links */
 .tablink 
@@ -57,7 +51,7 @@ header
 }
 .tablink:hover
 {
-    border-bottom: 2px solid #242021;
+    border-bottom: 1px solid #242021;
 }
 
 #content
@@ -65,7 +59,6 @@ header
     width: 100%;
     min-height: 100%;
 }
-/* Style the tab content (and add height:100% for full page content) */
 
 .tablink, 
 .homeTxt h1,
@@ -77,37 +70,47 @@ header
     font-family: 'Permanent Marker', sans-serif;
 }
 
-#Menu p
+#Menu p,
+.homeTxt p,
+#Contact article p
 {
     font-family: 'Bellefair', serif;
 }
-#Home
+#Home, 
+#Contact
 {
-    height: 100vh;
-    background-image: url('./images/FatChoy_hbg.png');
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.homeTxt
+.homeTxt,
+#Contact article
 {
-    max-width: 40%;
-    /* background-color: aqua; */
+    max-width: 46%;
     text-align: center;
     letter-spacing: .05rem;
     line-height: 1.5rem;
-    margin-top: 150px;
+    margin-top: 250px;
+
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
-.homeTxt h1, p
+.homeTxt h1, 
+.homeTxt p,
+#Contact article h1,
+#Contact article p
 {
     color: #242021;
 }
-.homeTxt h1
+.homeTxt h1,
+#Contact article h1
 {
     font-size: 4rem;
     line-height: 4rem;
-    margin-bottom: 20px;
 }
 .homeTxt button
 {
@@ -119,16 +122,15 @@ header
     background-color: #242021;
     color: #fdfcfa;
     font-size: 1.2rem;
-    margin-bottom: 20px;
     transition: all .2s ease-in;
 }
 .homeTxt button:hover
 {
     opacity: .7;
 }
-.homeTxt p
+.homeTxt p,
+#Contact article p
 {
-    font-family: 'Bellefair', serif;
     font-size: 1.7rem;
 }
 
@@ -141,7 +143,8 @@ header
 {
     text-align: center;
 }
-.openDays p
+.openDays p,
+.foodItem p
 {
     font-size: 1.4rem;
 }
@@ -159,38 +162,48 @@ header
     align-items: center;
     gap: 10px;
 
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 .dishesCont
 {
-    padding: 30px;
+    padding: 20px;
     display: flex;
-    flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 20px;
-
-    border: 1px solid gold;
+    flex-wrap: wrap;
+    /* border: 1px solid gold; */
 }
 #Menu article
 {
-    width: 25%;
+    width: 30%;
     height: 100%;
-    border: 1px solid rebeccapurple;
-    text-align: center;
-
-    font-size: 2rem;
+    padding: 20px;
+    /* border: 1px solid rebeccapurple; */
+    text-align: left;
 }
-#Contact {background-color: blue;}
-footer
+#Menu  h2
 {
-    background-color: aqua;
-    flex-basis: 5vh;
-    margin-top: auto ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 3rem;
+}
+.foodItem
+{
+    /* border: 1px solid greenyellow; */
+    margin: 1rem 0;
+}
+.foodItem h3
+{
+    font-size: 1.95rem;
+}
 
-    font-family: 'Bellefair', serif;
-    font-size: 1.2rem;
+@media screen and (max-width:996px) {
+    #Contact article,
+    .homeTxt
+    {
+        width: 100%;
+    }
+    #Menu article
+    {
+        width: 100%;
+    }
 }
